[package]
name = "cricket"
version = "0.1.0"
authors = ["insanitybit <insanitybit@gmail.com>"]

[dependencies.url]
git = "https://github.com/servo/rust-url"
features = ["query_encoding"]

[dependencies]
iron = "*"
router = "*"
serde = "*"
serde_macros = "*"
hyper = "*"
num_cpus = "*"
csv = "*"
rustc-serialize = "*"
nickel = "*"
mopa = "*"
# rust-ini = "*"

# [dependencies.clippy]
# git = "https://github.com/Manishearth/rust-clippy"

[dependencies.threadpool]
version = "*"
features = ["scoped-pool"]

[profile.dev]
opt-level = 0
# codegen-units = 4
debug = true
rpath = false
lto = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
